src/libvamc_llvm/src/tests/functions/snapshots/vamc_llvm__tests__functions__function_declarations__typed_ternary_function_declaration.snap
---
source: src/libvamc_llvm/src/tests/functions/function_declarations.rs
expression: compiler.module.print_to_string().to_string_lossy()
---
; ModuleID = 'test_module'
source_filename = "test_module"

define i32 @test_function() {
test_block:
}

define i32 @return_one(i32 %0, i32 %1, i32 %2) {
return_one:
  ret i32 1
}

